Do not override getaddrinfo in libc_interceptor

This code should live in an executable,
but never in a library as it causes erratic behavior
depending on the linking order.
It is safe to guard it since it was only used for logging.
Chromium change: https://chromium-review.googlesource.com/c/chromium/src/+/3936307

Fixes: QTBUG-110287
Change-Id: I511b24be3b3a89fa28d95f90293bdca9f38f70af
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/456327
Reviewed-by: Michal Klocek <michal.klocek@qt.io>